# zita

./: .babelrc  .dockerignore  .editorconfig  .eslintrc  .gitignore  AUTHORS  CHECKS  Dockerfile  LICENSE.txt  Procfile  README.md  SETUP.md  entrypoint.sh  jsconfig.json  next.compose-plugin.js  next.config.js  package-lock.json  package.json  server.js
components/: albumTabs.jsx  photoTagsDiff.jsx  photoTooltip.less
components/tagger/: tagged.less  tagger.jsx  tagging.jsx  tagging.less
components/waterfall/: photoLoader.jsx
example/data/Test Empty Folder/: .keep
lib/: utils.js
pages/: _app.jsx  _document.jsx  index.js
pages/api/: predict.js
pages/predict/: index.jsx
pages/test/: [albumId].jsx  index.jsx
pages/train/: index.jsx
python/: README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  supervisord.conf
python/zita/: app.py  celery.py  rpc.py  settings.py  tasks.py
python/zita/data/: __init__.py  dedup.py  photo.py
python/zita/serve/: __init__.py  evaluate.py  predict.py  redis.py  resolver.py  schema.py  typedef.gql
python/zita/train/: __init__.py  basic.py
python/zita/utils/: __init__.py  parallel_runner.py
server/backend/: RPCBackend.js
server/graphql/: photo.js  utils.js
server/store/: FileStore.js
src/components/: albumTabs.jsx  albumTabs.scss  context.js  fakeProgress.jsx  fakeProgress.scss  header.jsx  header.scss  photoTagsDiff.scss  photoTooltip.jsx  smoothProgress.jsx
src/lib/: client.js
src/pages/: _app.jsx
src/pages/album/: index.jsx  (+1 more)
src/server/: settings.js  store.js
src/styles/: index.scss  train.scss
styles/: index.less
(+15 files in other folders)
